--- a/web_flask/static/styles/6-filters.css
+++ b/web_flask/static/styles/6-filters.css
@@ -67,6 +67,8 @@ button:hover {
     border-radius: 4px;
     background: #FAFAFA;
     padding-bottom: 25px;
+    height: 300px;
+    overflow-y: scroll;
 }
 
 .filters .amenities .popover {
